--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -73,7 +73,7 @@ add_library(
   ${HHEADERS} ${CSOURCES}
   )
 
-if(MSVC AND CURL_STATICLIB)
+if(MSVC AND CURL_STATICLIB AND CMAKE_EXE_LINKER_FLAGS)
   set_target_properties(${LIB_NAME} PROPERTIES STATIC_LIBRARY_FLAGS ${CMAKE_EXE_LINKER_FLAGS})
 endif()
 
