Enabled external OpenSSL configuration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -354,7 +354,9 @@ if(CMAKE_USE_DARWINSSL)
 endif()
 
 if(CMAKE_USE_OPENSSL)
-  find_package(OpenSSL REQUIRED)
+  if(NOT DEFINED OPENSSL_INCLUDE_DIR AND NOT DEFINED OPENSSL_LIBRARIES)
+    find_package(OpenSSL REQUIRED)
+  endif()
   set(SSL_ENABLED ON)
   set(USE_OPENSSL ON)
   set(HAVE_LIBCRYPTO ON)
