--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,8 +125,10 @@ set(CURL_LIBS "")
 
 if(ENABLE_ARES)
   set(USE_ARES 1)
-  if(NOT DEFINED CARES_LIBRARY)
+  if(NOT DEFINED CARES_LIBRARY AND NOT DEFINED CARES_INCLUDE)
     find_package(CARES REQUIRED)
+  else()
+    include_directories(${CARES_INCLUDE})
   endif()
   list(APPEND CURL_LIBS ${CARES_LIBRARY} )
   set(CURL_LIBS ${CURL_LIBS} ${CARES_LIBRARY})
